Changed project name

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ngflix-preview",
+  "name": "netflix-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --source-map=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
