--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress": "concurrently \"ng serve\" \"cypress open\""
   },
   "private": true,
   "dependencies": {
@@ -33,6 +35,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "concurrently": "^5.2.0",
+    "cypress": "^4.4.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
