--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: '3.4'
 services:
   netflix-angular:
     image: netflix-angular
-    build: .
+    container_name: netflix-angular
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 8082:80
